--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,22 +37,29 @@ tasks:
   generate-templ:
     desc: Generate Templ files.
     cmds:
-      - air
+      - templ generate
 
   dev:
     desc: Run the dev server.
     cmds:
-        - task --parallel dev:air dev:templ
+      - task --parallel dev:templ dev:air dev:assets dev:sync_assets
+
+  dev:assets:
+    desc: Run TailwindCSS And Esbuild build in watch mode.
+    cmds:
+      - bun run dev
 
   dev:air:
     desc: Run the dev server with air.
     cmds:
-      - air
+      - air -c .air.toml
 
   dev:templ:
-      desc: Run the dev server with templ.
-      cmds:
-        - templ generate --watch --proxy="http://localhost:8080" --cmd="./airtempl"
+    desc: Run the dev server with templ.
+    cmds:
+      - templ generate --watch --proxy="http://localhost:8080" --open-browser=false
+
+  dev:sync_assets: air -c .air_proxy.toml
 
   build:
     desc: Build production Go binary and assets.
@@ -102,8 +109,7 @@ tasks:
     cmds:
       - go mod tidy
 
-  nil-away:
-    nilaway -exclude-pkgs="github.com/labstack/echo,github.com/a-h/templ,github.com/cosmtrek/air,github.com/nedpals/supabase-go,github.com/apple/pkl-go" ./...
+  nil-away: nilaway -exclude-pkgs="github.com/labstack/echo,github.com/a-h/templ,github.com/cosmtrek/air,github.com/nedpals/supabase-go,github.com/apple/pkl-go" ./...
 
   lint:
     desc: Uses golangci-lint
@@ -130,7 +136,6 @@ tasks:
   sql-regenerate:
     desc: Regenerate models from SQL.
     cmds:
-      - task: sql-spec-reset
       - task: sql-spec-migrate
       - task: sql-check-and-generate
 
